--- a/src/component/Todo.css
+++ b/src/component/Todo.css
@@ -4,8 +4,10 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
-    background-color: red;
+    background-color: white;
     font-size: 2rem;
+    color: black;
+    border-radius: 5px;
 }
 
 .todo__list-btn{
@@ -15,9 +17,19 @@
     margin-left: 10px;
 }
 
+
 .completed{
     text-decoration: line-through;
     opacity: 0.5;
+}
+
+.check{
+    background-color: #CDF2CA;
+    
+}
+
+.delete{
+    background-color: #FF7878;
 }
 
 
